# resnet_eft

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: paper_figures.ipynb
src/resnet_eft/: __init__.py  backend.py  chi_op.py  core_types.py  gaussian_expectation.py  k1_source_op.py  layer_update.py  v4_repr.py
src/resnet_eft/validation/: __init__.py  mc_simulation.py  real_network.py
tests/: test_backend.py  test_chi_op.py  test_gaussian_expectation.py  test_k1_source_op.py  test_layer_update.py  test_v4_transport.py  test_validation.py
