[project]
name = "resnet-eft"
version = "0.1.0"
description = "Collective-kernel EFT for finite-width pre-activation ResNets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Hidetoshi Kawase", email = "kawase_hidetoshi@cyberagent.co.jp" },
    { name = "Toshihiro Ota", email = "ota_toshihiro@cyberagent.co.jp"}
]
keywords = [
    "neural-networks",
    "gaussian-process",
    "nngp",
    "kernel",
    "perturbation-theory",
    "effective-field-theory",
    "resnet",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.64",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/kavvase/resnet-eft"
Repository = "https://github.com/kavvase/resnet-eft"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resnet_eft"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["resnet_eft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
